# sdkwork-inventory

./: AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.workflow.json
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apps/: README.md
crates/sdkwork-api-inventory-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-inventory-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-inventory-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-inventory-standalone-gateway/: Cargo.toml
crates/sdkwork-api-inventory-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-inventory-repository-sqlx/: Cargo.toml
crates/sdkwork-commerce-inventory-repository-sqlx/src/: postgres_inventory.rs  sqlite_inventory.rs
crates/sdkwork-commerce-inventory-service/: Cargo.toml  README.md
crates/sdkwork-commerce-inventory-service/specs/: README.md  component.spec.json
crates/sdkwork-commerce-inventory-service/src/commands/: mod.rs
crates/sdkwork-commerce-inventory-service/src/domain/: mod.rs
crates/sdkwork-commerce-inventory-service/src/ports/: mod.rs
crates/sdkwork-commerce-inventory-service/src/queries/: mod.rs
crates/sdkwork-commerce-inventory-service/src/service/: mod.rs
crates/sdkwork-commerce-inventory-service/tests/: inventory_standard.rs
crates/sdkwork-inventory-api-server/: Cargo.toml
crates/sdkwork-inventory-api-server/src/: lib.rs  main.rs
crates/sdkwork-inventory-database-host/: Cargo.toml
crates/sdkwork-inventory-database-host/src/: lib.rs
crates/sdkwork-inventory-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-inventory-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-inventory-repository-sqlx/: Cargo.toml
crates/sdkwork-inventory-repository-sqlx/src/: lib.rs  postgres_inventory.rs  sqlite_inventory.rs
crates/sdkwork-inventory-repository-sqlx/src/sqlite_inventory/: tests.rs
crates/sdkwork-inventory-service/: Cargo.toml  README.md
crates/sdkwork-inventory-service-host/: Cargo.toml
crates/sdkwork-inventory-service-host/src/: lib.rs
crates/sdkwork-inventory-service/specs/: README.md  component.spec.json
crates/sdkwork-inventory-service/src/commands/: mod.rs
crates/sdkwork-inventory-service/src/domain/: mod.rs
crates/sdkwork-inventory-service/src/ports/: mod.rs
crates/sdkwork-inventory-service/src/queries/: mod.rs
crates/sdkwork-inventory-service/src/service/: mod.rs
crates/sdkwork-inventory-service/tests/: inventory_standard.rs
crates/sdkwork-inventory-standalone-gateway/: Cargo.toml
crates/sdkwork-inventory-standalone-gateway/src/: main.rs
crates/sdkwork-router-inventory-app-api/: Cargo.toml
crates/sdkwork-router-inventory-app-api/src/: app_merchant_inventory_router.rs  lib.rs  routes.rs
crates/sdkwork-router-inventory-backend-api/: Cargo.toml
crates/sdkwork-router-inventory-backend-api/src/: backend_inventory_router.rs  lib.rs
crates/sdkwork-routes-inventory-app-api/: Cargo.toml
crates/sdkwork-routes-inventory-app-api/specs/: component.spec.json
crates/sdkwork-routes-inventory-app-api/src/: app_merchant_inventory_router.rs  http_route_manifest.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-inventory-backend-api/: Cargo.toml
crates/sdkwork-routes-inventory-backend-api/specs/: component.spec.json
crates/sdkwork-routes-inventory-backend-api/src/: backend_inventory_router.rs  http_route_manifest.rs  lib.rs  subject.rs  web_bootstrap.rs
database/: README.md  database.manifest.json
database/contract/: schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_inventory_baseline.sql
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql
database/seeds/locales/de-DE/: README.md
database/seeds/locales/en-US/: README.md
database/seeds/locales/fr-FR/: README.md
database/seeds/locales/ja-JP/: README.md
database/seeds/locales/ko-KR/: README.md
database/seeds/locales/ru-RU/: README.md
database/seeds/locales/zh-CN/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
sdks/_route-manifests/app-api/: sdkwork-routes-inventory-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-routes-inventory-backend-api.route-manifest.json
sdks/sdkwork-inventory-app-sdk/: sdk-manifest.json
sdks/sdkwork-inventory-app-sdk/openapi/: sdkwork-inventory-app-api.sdkgen.json
sdks/sdkwork-inventory-app-sdk/sdkwork-inventory-app-sdk-typescript/: package.json
sdks/sdkwork-inventory-app-sdk/specs/: component.spec.json
sdks/sdkwork-inventory-backend-sdk/: sdk-manifest.json
sdks/sdkwork-inventory-backend-sdk/openapi/: sdkwork-inventory-backend-api.sdkgen.json
sdks/sdkwork-inventory-backend-sdk/sdkwork-inventory-backend-sdk-typescript/: package.json
sdks/sdkwork-inventory-backend-sdk/sdkwork-inventory-backend-sdk-typescript/src/: index.ts
sdks/sdkwork-inventory-backend-sdk/specs/: component.spec.json
specs/: component.spec.json  iam.module.manifest.json
tools/: inventory_api_sdk_generate.mjs
