[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-inventory-assembly",
  "crates/sdkwork-inventory-service",
  "crates/sdkwork-inventory-repository-sqlx",
  "crates/sdkwork-routes-inventory-app-api",
  "crates/sdkwork-routes-inventory-backend-api",
  "crates/sdkwork-inventory-database-host",
  "crates/sdkwork-inventory-service-host",
  "crates/sdkwork-api-inventory-standalone-gateway",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-or-later"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork-contract-service = { path = "../sdkwork-account/crates/sdkwork-contract-service" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-iam-context-service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-inventory-service = { path = "crates/sdkwork-inventory-service" }
sdkwork-inventory-repository-sqlx = { path = "crates/sdkwork-inventory-repository-sqlx" }
sdkwork-routes-inventory-app-api = { path = "crates/sdkwork-routes-inventory-app-api" }
sdkwork-routes-inventory-backend-api = { path = "crates/sdkwork-routes-inventory-backend-api" }
sdkwork-inventory-database-host = { path = "crates/sdkwork-inventory-database-host" }
sdkwork-inventory-service-host = { path = "crates/sdkwork-inventory-service-host" }
sdkwork-api-inventory-assembly = { path = "crates/sdkwork-api-inventory-assembly" }
