[package]
name = "sdkwork-api-inventory-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-inventory application HTTP plane."

[lib]
name = "sdkwork_api_inventory_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_inventory_service_host = { package = "sdkwork-inventory-service-host", path = "../sdkwork-inventory-service-host" }
sdkwork-routes-inventory-app-api = { path = "../sdkwork-routes-inventory-app-api" }
sdkwork-routes-inventory-backend-api = { path = "../sdkwork-routes-inventory-backend-api" }
