[package]
name = "sdkwork-api-inventory-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-inventory application HTTP plane."

[lib]
name = "sdkwork_api_inventory_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-inventory-service-host.workspace = true
sdkwork-routes-inventory-app-api.workspace = true
sdkwork-routes-inventory-backend-api.workspace = true
