[package]
name = "sdkwork-api-inventory-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-inventory-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_api_inventory_assembly = { package = "sdkwork-api-inventory-assembly", path = "../sdkwork-api-inventory-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_routes_inventory_app_api.workspace = true
sdkwork_routes_inventory_backend_api.workspace = true
sdkwork_inventory_service_host.workspace = true
