[package]
name = "sdkwork-api-inventory-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-inventory-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork-api-inventory-assembly.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork-routes-inventory-app-api.workspace = true
sdkwork-routes-inventory-backend-api.workspace = true
sdkwork-inventory-service-host.workspace = true
