[package]
publish.workspace = true
name = "sdkwork-commerce-inventory-service"
version.workspace = true
edition = "2021"
license.workspace = true
description = "SDKWork commerce inventory domain rules for stock, reservations, deductions, releases, and movements."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_contract_service.workspace = true
