[package]
name = "sdkwork-inventory-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-inventory application HTTP plane."

[lib]
name = "sdkwork_inventory_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_inventory_app_api = { package = "sdkwork-routes-inventory-app-api", path = "../sdkwork-routes-inventory-app-api" }
sdkwork_routes_inventory_backend_api = { package = "sdkwork-routes-inventory-backend-api", path = "../sdkwork-routes-inventory-backend-api" }
sdkwork_inventory_service_host = { package = "sdkwork-inventory-service-host", path = "../sdkwork-inventory-service-host" }
