[package]
publish.workspace = true
name = "sdkwork-inventory-service"
version.workspace = true
edition = "2021"
license.workspace = true
description = "SDKWork commerce inventory domain rules for stock, reservations, deductions, releases, and movements."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-contract-service.workspace = true
