[package]
name = "sdkwork-inventory-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-inventory-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_inventory_gateway_assembly = { package = "sdkwork-inventory-gateway-assembly", path = "../sdkwork-inventory-gateway-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_routes_inventory_app_api.workspace = true
sdkwork_routes_inventory_backend_api.workspace = true
sdkwork_inventory_service_host.workspace = true
